stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_stepflow__help.snap
---
source: crates/stepflow-cli/tests/commands/test_stepflow.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Stepflow CLI.

Usage: stepflow [OPTIONS] <COMMAND>

Commands:
  run              Run a workflow directly
  submit-batch     Submit a batch workflow to a Stepflow service for execution
  submit           Submit a workflow to a Stepflow server
  test             Run tests defined in workflow files or directories
  list-components  List all available components from a stepflow config
  repl             Start an interactive REPL for workflow development and debugging
  validate         Validate workflow files and configuration
  visualize        Visualize workflow structure as a graph
  help             Print this message or the help of the given subcommand(s)

Options:
      --log-level <LOG_LEVEL>
          Log level filter for stepflow crates
          
          [env: STEPFLOW_LOG_LEVEL=]
          [default: info]

      --other-log-level <OTHER_LOG_LEVEL>
          Log level filter for non-stepflow crates (e.g., dependencies) When None, uses the same level as log_level
          
          [env: STEPFLOW_OTHER_LOG_LEVEL=]

      --log-format <LOG_FORMAT>
          Log output format

          Possible values:
          - json: Structured JSON logs
          - text: Human-readable text logs
          
          [env: STEPFLOW_LOG_FORMAT=]
          [default: text]

      --log-file <LOG_FILE>
          Log to file (instead of stdout)
          
          [env: STEPFLOW_LOG_FILE=]

      --trace-enabled
          Enable distributed tracing
          
          [env: STEPFLOW_TRACE_ENABLED=]

      --otlp-endpoint <OTLP_ENDPOINT>
          OTLP endpoint (e.g., "http://localhost:4317") Used for both trace and log export when log_destination is LogDestination::OpenTelemetry
          
          [env: STEPFLOW_OTLP_ENDPOINT=]

      --omit-stack-trace
          Omit stack traces (line numbers of errors)

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

----- stderr -----
