stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_stepflow__invalid_command.snap
---
source: crates/stepflow-main/tests/commands/test_stepflow.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - invalid-command
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: unrecognized subcommand 'invalid-command'

Usage: stepflow [OPTIONS] <COMMAND>

For more information, try '--help'.
