stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_stepflow__no_command.snap
---
source: crates/stepflow-cli/tests/commands/test_stepflow.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
  env:
    STEPFLOW_LOG_DESTINATION: ""
    STEPFLOW_LOG_FILE: ""
    STEPFLOW_LOG_FORMAT: ""
    STEPFLOW_LOG_LEVEL: ""
    STEPFLOW_OTHER_LOG_LEVEL: ""
    STEPFLOW_OTLP_ENDPOINT: ""
    STEPFLOW_TRACE_ENABLED: ""
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: 'stepflow' requires a subcommand but one was not provided
  [subcommands: run, run-batch, submit-batch, submit, test, list-components, repl, validate, visualize, help]

Usage: stepflow [OPTIONS] <COMMAND>

For more information, try '--help'.
