stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_stepflow__with_different_log_levels.snap
---
source: crates/stepflow-cli/tests/commands/test_stepflow.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - "--log-level=trace"
    - "--other-log-level=debug"
    - "--help"
  env:
    STEPFLOW_LOG_DESTINATION: ""
    STEPFLOW_LOG_FILE: ""
    STEPFLOW_LOG_FORMAT: ""
    STEPFLOW_LOG_LEVEL: ""
    STEPFLOW_OTHER_LOG_LEVEL: ""
    STEPFLOW_OTLP_ENDPOINT: ""
    STEPFLOW_TRACE_ENABLED: ""
---
success: true
exit_code: 0
----- stdout -----
Stepflow CLI.

Usage: stepflow [OPTIONS] <COMMAND>

Commands:
  run              Run a workflow directly
  submit           Submit a workflow to a Stepflow server
  test             Run tests defined in workflow files or directories
  list-components  List all available components from a stepflow config
  repl             Start an interactive REPL for workflow development
  validate         Validate workflow files and configuration
  infer            Infer types for a workflow and output an annotated flow
  visualize        Visualize workflow structure as a graph
  help             Print this message or the help of the given subcommand(s)

Options:
      --log-level <LOG_LEVEL>
          Log level filter for stepflow crates
          
          [env: STEPFLOW_LOG_LEVEL=]
          [default: info]

      --other-log-level <OTHER_LOG_LEVEL>
          Log level filter for non-stepflow crates (e.g., dependencies) When None, uses the same level as log_level
          
          [env: STEPFLOW_OTHER_LOG_LEVEL=]

      --log-destination <LOG_DESTINATION>
          Log output destination

          Possible values:
          - stdout: Log to stdout
          - file:   Log to a file
          - otlp:   Log to OpenTelemetry (OTLP)
          
          [env: STEPFLOW_LOG_DESTINATION=]
          [default: stdout]

      --log-format <LOG_FORMAT>
          Log output format (only applies to stdout and file destinations)

          Possible values:
          - json: Structured JSON logs
          - text: Human-readable text logs
          
          [env: STEPFLOW_LOG_FORMAT=]
          [default: text]

      --log-file <LOG_FILE>
          Log file path (only applies when log_destination is file)
          
          [env: STEPFLOW_LOG_FILE=]

      --trace-enabled
          Enable distributed tracing
          
          [env: STEPFLOW_TRACE_ENABLED=]

      --metrics-enabled
          Enable metrics collection and export
          
          [env: STEPFLOW_METRICS_ENABLED=]

      --otlp-endpoint <OTLP_ENDPOINT>
          OTLP endpoint (e.g., "http://localhost:4317") Required when log_destination is otlp, trace_enabled is true, or metrics_enabled is true
          
          [env: STEPFLOW_OTLP_ENDPOINT=]

      --omit-stack-trace
          Omit stack traces (line numbers of errors)

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

----- stderr -----
